Some minor corrections in thesis

--- a/Code/Tests/Plot_costs.ipynb
+++ b/Code/Tests/Plot_costs.ipynb
@@ -323,7 +323,7 @@
     "plt.ylim([ymin,ymax])\n",
     "\n",
     "plt.xlabel(\"$K$\")\n",
-    "plt.ylabel(\"Approxiamted Cost\")\n",
+    "plt.ylabel(\"Approximated Cost\")\n",
     "\n",
     "plt.savefig(\"cost_parameters.pdf\",bbox=\"tight\")"
    ]
