--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -53,12 +53,30 @@
 	doi = {10.1007/978-3-642-00222-9},
 }
 
+@article{grasedyck_adaptive_2004,
+	title = {Adaptive Geometrically Balanced Clustering of H-Matrices},
+	volume = {73},
+	issn = {1436-5057},
+	url = {https://doi.org/10.1007/s00607-004-0068-0},
+	doi = {10.1007/s00607-004-0068-0},
+	abstract = {In [8], a class of (data-sparse) hierarchical (-) matrices is introduced that can be used to efficiently assemble and store stiffness matrices arising in boundary element applications. In this paper, we develop and analyse modifications in the construction of an -matrix that will allow an efficient application to problems involving adaptive mesh refinement. In particular, we present a new clustering algorithm such that, when an -matrix has to be updated due to some adaptive grid refinement, the majority of the previously assembled matrix entries can be kept whereas only a few new entries resulting from the refinement have to be computed. We provide an efficient implementation of the necessary updates and prove for the resulting -matrix that the storage requirements as well as the complexity of the matrix-vector multiplication are almost linear, i.e.,},
+	pages = {1--23},
+	number = {1},
+	journaltitle = {Computing},
+	shortjournal = {Computing},
+	author = {Grasedyck, L. and Hackbusch, W. and Borne, S. Le},
+	urldate = {2022-05-16},
+	date = {2004-07-01},
+	langid = {english},
+	keywords = {adaptive mesh refinement, boundary elements, data-sparse approximation, Hierarchical matrices},
+	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/RRTNTQJ6/Grasedyck et al. - 2004 - Adaptive Geometrically Balanced Clustering of H-Ma.pdf:application/pdf},
+}
 
 @book{dewilde_time-varying_1998,
 	title = {Time-Varying Systems and Computations},
 	isbn = {978-0-7923-8189-1},
 	abstract = {Preface. 1. Introduction. Part I: Realization. 2. Notation and Properties of Non-Uniform Spaces. 3. Time-Varying State Space Realizations. 4. Diagonal Algebra. 5. Operator Realization Theory. 6. Isometric and Inner Operators. 7. Inner-Outer Factorization and Operator Inversion. Part {II}: Interpolation and Approximation. 8. J-Unitary Operators. 9. Algebraic Interpolation. 10. Hankel-Norm Model Reduction. 11. Low-Rank Matrix Approximation and Subspace Tracking. Part {III}: Factorization. 12. Orthogonal Embedding. 13. Spectral Factorization. 14. Lossless Cascade Factorizations. 15. Conclusions. Appendices: A. Hilbert Space Definitions and Properties. References. Glossary of Notation. Index.},
-	author = {Dewilde, P. and Veen, Alle-Jan},
+	author = {Dewilde, P. and van der Veen, Alle-Jan},
 	date = {1998-01-01},
 	doi = {10.1007/978-1-4757-2817-0},
 	file = {Full Text PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/ZSF9ZQA2/Dewilde und Veen - 1998 - Time-Varying Systems and Computations.pdf:application/pdf},
@@ -243,18 +261,18 @@
 
 
 @article{adamjan_analytic_1971,
-	title = {{ANALYTIC} {PROPERTIES} {OF} {SCHMIDT} {PAIRS} {FOR} A {HANKEL} {OPERATOR} {AND} {THE} {GENERALIZED} {SCHUR}-{TAKAGI} {PROBLEM}},
+	title = {{Analytic} {properties} {of} {Schmidt} {pairs} {for} a {Hankel} {operator} {and} {the} {generalized} {Schur}-{Takagi} {problem}},
 	volume = {15},
 	issn = {0025-5734},
 	doi = {10.1070/SM1971v015n01ABEH001531},
-	pages = {31},
 	number = {1},
 	journaltitle = {Mathematics of the {USSR}-Sbornik},
 	shortjournal = {Math. {USSR} Sb.},
 	author = {Adamjan, V. M. and Arov, D. Z. and Kreĭn, M. G.},
 	date = {1971-02-28},
 	langid = {english},
-	note = {Publisher: {IOP} Publishing},
+	note = {Publisher: {IOP} Publishing, Translated by:
+	J. C. Lennox},
 	file = {Adamjan et al. - 1971 - ANALYTIC PROPERTIES OF SCHMIDT PAIRS FOR A HANKEL .pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/JMKPXXEC/Adamjan et al. - 1971 - ANALYTIC PROPERTIES OF SCHMIDT PAIRS FOR A HANKEL .pdf:application/pdf},
 }
 
