--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -568,4 +568,18 @@ date = {2019-03-21}
 	file = {arXiv Fulltext PDF:/home/stephan/snap/zotero-snap/common/Zotero/storage/PANLLL86/Knuth - 1993 - Johann Faulhaber and sums of powers.pdf:application/pdf;arXiv.org Snapshot:/home/stephan/snap/zotero-snap/common/Zotero/storage/G34Y9M2U/9207222.html:text/html},
 }
 
-
+@article{recht_guaranteed_2010,
+	title = {Guaranteed Minimum-Rank Solutions of Linear Matrix Equations via Nuclear Norm Minimization},
+	volume = {52},
+	issn = {0036-1445, 1095-7200},
+	doi = {10.1137/070697835},
+	abstract = {The aﬃne rank minimization problem consists of ﬁnding a matrix of minimum rank that satisﬁes a given system of linear equality constraints. Such problems have appeared in the literature of a diverse set of ﬁelds including system identiﬁcation and control, Euclidean embedding, and collaborative ﬁltering. Although speciﬁc instances can often be solved with specialized algorithms, the general aﬃne rank minimization problem is {NP}-hard because it contains vector cardinality minimization as a special case. In this paper, we show that if a certain restricted isometry property holds for the linear transformation deﬁning the constraints, the minimum-rank solution can be recovered by solving a convex optimization problem, namely, the minimization of the nuclear norm over the given aﬃne space. We present several random ensembles of equations where the restricted isometry property holds with overwhelming probability, provided the codimension of the subspace is suﬃciently large. The techniques used in our analysis have strong parallels in the compressed sensing framework. We discuss how aﬃne rank minimization generalizes this preexisting concept and outline a dictionary relating concepts from cardinality minimization to those of rank minimization. We also discuss several algorithmic approaches to minimizing the nuclear norm and illustrate our results with numerical examples.},
+	pages = {471--501},
+	number = {3},
+	journaltitle = {{SIAM} Review},
+	shortjournal = {{SIAM} Rev.},
+	author = {Recht, Benjamin and Fazel, Maryam and Parrilo, Pablo A.},
+	date = {2010-01},
+	langid = {english},
+	file = {Recht et al. - 2010 - Guaranteed Minimum-Rank Solutions of Linear Matrix.pdf:/home/stephan/snap/zotero-snap/common/Zotero/storage/9QCZ7XD7/Recht et al. - 2010 - Guaranteed Minimum-Rank Solutions of Linear Matrix.pdf:application/pdf},
+}
